PL3/Parte3/EJ1_2Parser.java
// Generated from EJ1_2Parser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class EJ1_2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASIGNAR=1, MOSTRAR=2, SI=3, SI_NO=4, TERMINAR=5, MIENTRAS=6, HACER=7, 
		PARA=8, DESDE=9, HASTA=10, PASO=11, ROMPER=12, CONTINUAR=13, MARCA_COND=14, 
		FLECHA=15, FIN_LINEA=16, IGUAL=17, DISTINTO=18, MENOR_IGUAL=19, MAYOR_IGUAL=20, 
		MENOR=21, MAYOR=22, AND=23, OR=24, NOT=25, SUMA=26, RESTA=27, ASIGNACION=28, 
		MULT=29, DIV=30, PAREN_ABRE=31, PAREN_CIERRA=32, VERDADERO=33, FALSO=34, 
		INT=35, FLOAT=36, STRING=37, ID=38, COMENTARIO=39, ESPACIO=40;
	public static final int
		RULE_programa = 0, RULE_sentencia = 1, RULE_declaracion = 2, RULE_asignacion = 3, 
		RULE_impresion = 4, RULE_bucle = 5, RULE_bucle_mientras = 6, RULE_bucle_para = 7, 
		RULE_control_bucle = 8, RULE_condicional = 9, RULE_bloque = 10, RULE_condicion = 11, 
		RULE_bool_o = 12, RULE_bool_y = 13, RULE_bool_no = 14, RULE_operando_cmp = 15, 
		RULE_comparacion = 16, RULE_booleano = 17, RULE_operador_relacional = 18, 
		RULE_expresion = 19, RULE_termino = 20, RULE_factor = 21, RULE_atomo = 22, 
		RULE_expr_general = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "sentencia", "declaracion", "asignacion", "impresion", "bucle", 
			"bucle_mientras", "bucle_para", "control_bucle", "condicional", "bloque", 
			"condicion", "bool_o", "bool_y", "bool_no", "operando_cmp", "comparacion", 
			"booleano", "operador_relacional", "expresion", "termino", "factor", 
			"atomo", "expr_general"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'asignar'", "'mostrar'", "'si'", "'no'", "'terminar'", "'mientras'", 
			"'hacer'", "'para'", "'desde'", "'hasta'", "'paso'", "'romper'", "'continuar'", 
			"'???'", "'->'", "';P'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", 
			"'and'", "'or'", "'not'", "'+'", "'-'", "'='", "'*'", "'/'", "'('", "')'", 
			"'verdadero'", "'falso'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ASIGNAR", "MOSTRAR", "SI", "SI_NO", "TERMINAR", "MIENTRAS", "HACER", 
			"PARA", "DESDE", "HASTA", "PASO", "ROMPER", "CONTINUAR", "MARCA_COND", 
			"FLECHA", "FIN_LINEA", "IGUAL", "DISTINTO", "MENOR_IGUAL", "MAYOR_IGUAL", 
			"MENOR", "MAYOR", "AND", "OR", "NOT", "SUMA", "RESTA", "ASIGNACION", 
			"MULT", "DIV", "PAREN_ABRE", "PAREN_CIERRA", "VERDADERO", "FALSO", "INT", 
			"FLOAT", "STRING", "ID", "COMENTARIO", "ESPACIO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "EJ1_2Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EJ1_2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(EJ1_2Parser.EOF, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public List<CondicionalContext> condicional() {
			return getRuleContexts(CondicionalContext.class);
		}
		public CondicionalContext condicional(int i) {
			return getRuleContext(CondicionalContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EJ1_2ParserVisitor ) return ((EJ1_2ParserVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 543481147718L) != 0)) {
				{
				setState(50);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(48);
					sentencia();
					}
					break;
				case 2:
					{
					setState(49);
					condicional();
					}
					break;
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public ImpresionContext impresion() {
			return getRuleContext(ImpresionContext.class,0);
		}
		public BucleContext bucle() {
			return getRuleContext(BucleContext.class,0);
		}
		public Control_bucleContext control_bucle() {
			return getRuleContext(Control_bucleContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EJ1_2ParserVisitor ) return ((EJ1_2ParserVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		try {
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASIGNAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				declaracion();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				asignacion();
				}
				break;
			case MOSTRAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				impresion();
				}
				break;
			case MIENTRAS:
			case PARA:
				enterOuterAlt(_localctx, 4);
				{
				setState(60);
				bucle();
				}
				break;
			case ROMPER:
			case CONTINUAR:
				enterOuterAlt(_localctx, 5);
				{
				setState(61);
				control_bucle();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionContext extends ParserRuleContext {
		public TerminalNode ASIGNAR() { return getToken(EJ1_2Parser.ASIGNAR, 0); }
		public TerminalNode ID() { return getToken(EJ1_2Parser.ID, 0); }
		public TerminalNode ASIGNACION() { return getToken(EJ1_2Parser.ASIGNACION, 0); }
		public Expr_generalContext expr_general() {
			return getRuleContext(Expr_generalContext.class,0);
		}
		public TerminalNode FIN_LINEA() { return getToken(EJ1_2Parser.FIN_LINEA, 0); }
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).exitDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EJ1_2ParserVisitor ) return ((EJ1_2ParserVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(ASIGNAR);
			setState(65);
			match(ID);
			setState(66);
			match(ASIGNACION);
			setState(67);
			expr_general();
			setState(68);
			match(FIN_LINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(EJ1_2Parser.ID, 0); }
		public TerminalNode ASIGNACION() { return getToken(EJ1_2Parser.ASIGNACION, 0); }
		public Expr_generalContext expr_general() {
			return getRuleContext(Expr_generalContext.class,0);
		}
		public TerminalNode FIN_LINEA() { return getToken(EJ1_2Parser.FIN_LINEA, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).exitAsignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EJ1_2ParserVisitor ) return ((EJ1_2ParserVisitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(ID);
			setState(71);
			match(ASIGNACION);
			setState(72);
			expr_general();
			setState(73);
			match(FIN_LINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImpresionContext extends ParserRuleContext {
		public TerminalNode MOSTRAR() { return getToken(EJ1_2Parser.MOSTRAR, 0); }
		public Expr_generalContext expr_general() {
			return getRuleContext(Expr_generalContext.class,0);
		}
		public TerminalNode FIN_LINEA() { return getToken(EJ1_2Parser.FIN_LINEA, 0); }
		public ImpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impresion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).enterImpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).exitImpresion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EJ1_2ParserVisitor ) return ((EJ1_2ParserVisitor<? extends T>)visitor).visitImpresion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImpresionContext impresion() throws RecognitionException {
		ImpresionContext _localctx = new ImpresionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_impresion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(MOSTRAR);
			setState(76);
			expr_general();
			setState(77);
			match(FIN_LINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BucleContext extends ParserRuleContext {
		public Bucle_mientrasContext bucle_mientras() {
			return getRuleContext(Bucle_mientrasContext.class,0);
		}
		public Bucle_paraContext bucle_para() {
			return getRuleContext(Bucle_paraContext.class,0);
		}
		public BucleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bucle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).enterBucle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).exitBucle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EJ1_2ParserVisitor ) return ((EJ1_2ParserVisitor<? extends T>)visitor).visitBucle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BucleContext bucle() throws RecognitionException {
		BucleContext _localctx = new BucleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bucle);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MIENTRAS:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				bucle_mientras();
				}
				break;
			case PARA:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				bucle_para();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bucle_mientrasContext extends ParserRuleContext {
		public TerminalNode MIENTRAS() { return getToken(EJ1_2Parser.MIENTRAS, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode HACER() { return getToken(EJ1_2Parser.HACER, 0); }
		public TerminalNode FLECHA() { return getToken(EJ1_2Parser.FLECHA, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TerminalNode TERMINAR() { return getToken(EJ1_2Parser.TERMINAR, 0); }
		public Bucle_mientrasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bucle_mientras; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).enterBucle_mientras(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).exitBucle_mientras(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EJ1_2ParserVisitor ) return ((EJ1_2ParserVisitor<? extends T>)visitor).visitBucle_mientras(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bucle_mientrasContext bucle_mientras() throws RecognitionException {
		Bucle_mientrasContext _localctx = new Bucle_mientrasContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bucle_mientras);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(MIENTRAS);
			setState(84);
			condicion();
			setState(85);
			match(HACER);
			setState(86);
			match(FLECHA);
			setState(87);
			bloque();
			setState(88);
			match(TERMINAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bucle_paraContext extends ParserRuleContext {
		public TerminalNode PARA() { return getToken(EJ1_2Parser.PARA, 0); }
		public TerminalNode ID() { return getToken(EJ1_2Parser.ID, 0); }
		public TerminalNode DESDE() { return getToken(EJ1_2Parser.DESDE, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public TerminalNode HASTA() { return getToken(EJ1_2Parser.HASTA, 0); }
		public TerminalNode HACER() { return getToken(EJ1_2Parser.HACER, 0); }
		public TerminalNode FLECHA() { return getToken(EJ1_2Parser.FLECHA, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TerminalNode TERMINAR() { return getToken(EJ1_2Parser.TERMINAR, 0); }
		public TerminalNode PASO() { return getToken(EJ1_2Parser.PASO, 0); }
		public Bucle_paraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bucle_para; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).enterBucle_para(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).exitBucle_para(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EJ1_2ParserVisitor ) return ((EJ1_2ParserVisitor<? extends T>)visitor).visitBucle_para(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bucle_paraContext bucle_para() throws RecognitionException {
		Bucle_paraContext _localctx = new Bucle_paraContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bucle_para);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(PARA);
			setState(91);
			match(ID);
			setState(92);
			match(DESDE);
			setState(93);
			expresion();
			setState(94);
			match(HASTA);
			setState(95);
			expresion();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PASO) {
				{
				setState(96);
				match(PASO);
				setState(97);
				expresion();
				}
			}

			setState(100);
			match(HACER);
			setState(101);
			match(FLECHA);
			setState(102);
			bloque();
			setState(103);
			match(TERMINAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Control_bucleContext extends ParserRuleContext {
		public TerminalNode ROMPER() { return getToken(EJ1_2Parser.ROMPER, 0); }
		public TerminalNode FIN_LINEA() { return getToken(EJ1_2Parser.FIN_LINEA, 0); }
		public TerminalNode CONTINUAR() { return getToken(EJ1_2Parser.CONTINUAR, 0); }
		public Control_bucleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_control_bucle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).enterControl_bucle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).exitControl_bucle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EJ1_2ParserVisitor ) return ((EJ1_2ParserVisitor<? extends T>)visitor).visitControl_bucle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Control_bucleContext control_bucle() throws RecognitionException {
		Control_bucleContext _localctx = new Control_bucleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_control_bucle);
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ROMPER:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				match(ROMPER);
				setState(106);
				match(FIN_LINEA);
				}
				break;
			case CONTINUAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				match(CONTINUAR);
				setState(108);
				match(FIN_LINEA);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionalContext extends ParserRuleContext {
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode MARCA_COND() { return getToken(EJ1_2Parser.MARCA_COND, 0); }
		public TerminalNode SI() { return getToken(EJ1_2Parser.SI, 0); }
		public List<TerminalNode> FLECHA() { return getTokens(EJ1_2Parser.FLECHA); }
		public TerminalNode FLECHA(int i) {
			return getToken(EJ1_2Parser.FLECHA, i);
		}
		public List<BloqueContext> bloque() {
			return getRuleContexts(BloqueContext.class);
		}
		public BloqueContext bloque(int i) {
			return getRuleContext(BloqueContext.class,i);
		}
		public TerminalNode TERMINAR() { return getToken(EJ1_2Parser.TERMINAR, 0); }
		public TerminalNode SI_NO() { return getToken(EJ1_2Parser.SI_NO, 0); }
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).enterCondicional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).exitCondicional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EJ1_2ParserVisitor ) return ((EJ1_2ParserVisitor<? extends T>)visitor).visitCondicional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_condicional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			condicion();
			setState(112);
			match(MARCA_COND);
			setState(113);
			match(SI);
			setState(114);
			match(FLECHA);
			setState(115);
			bloque();
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SI_NO) {
				{
				setState(116);
				match(SI_NO);
				setState(117);
				match(FLECHA);
				setState(118);
				bloque();
				}
			}

			setState(121);
			match(TERMINAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BloqueContext extends ParserRuleContext {
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public List<CondicionalContext> condicional() {
			return getRuleContexts(CondicionalContext.class);
		}
		public CondicionalContext condicional(int i) {
			return getRuleContext(CondicionalContext.class,i);
		}
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).enterBloque(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EJ1_2ParserListener ) ((EJ1_2ParserListener)listener).exitBloque(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EJ1_2ParserVisitor ) return ((EJ1_2ParserVisitor<? extends T>)visitor).visitBloque(this);
			else return visitor.visitChildren(this);
		}
	}
